# PJC-matrix-multiplication

./: .gitignore  00.txt  00.txt.multiplied  00.txt.out  01.txt  01.txt.multiplied  01.txt.out  02.txt  02.txt.multiplied  02.txt.out  03.txt  03.txt.out  04.txt  04.txt.out  05.txt  05.txt.out  06.txt  06.txt.multiplied  06.txt.out  07.txt  07.txt.out  08.txt  08.txt.multiplied  08.txt.out  09.txt  09.txt.out  CMakeLists.txt  Matrix.hpp  MatrixBase.cpp  MatrixBase.hpp  MatrixRow.cpp  MatrixRow.hpp  MergeOperation.hpp  MultiplicationContext.cpp  MultiplyOperation.hpp  Operation.cpp  Operation.hpp  OptionControl.cpp  README.md  ReadOperation.cpp  (+6 more)
PJC-matrix-multiplication/: MatrixResource.cpp  MatrixResource.hpp  OptionControl.cpp  OptionControl.hpp  main.cpp
PJC-matrix-multiplication.xcodeproj/: project.pbxproj
PJC-matrix-multiplication/Matrix/: ConstSubMatrix.cpp  ConstSubMatrix.hpp  Matrix.cpp  Matrix.hpp  MatrixBase.cpp  MatrixBase.hpp  MatrixView.cpp  MatrixView.hpp  Shared.hpp  SubMatrix.cpp  SubMatrix.hpp
PJC-matrix-multiplication/MatrixReader/: MatrixReaderBase.hpp  SquareMatrixReader.cpp  SquareMatrixReader.hpp
PJC-matrix-multiplication/Multiplication/: MergeOperation.cpp  MergeOperation.hpp  MultiplicationContext.cpp  MultiplicationContext.hpp  MultiplyOperation.cpp  ReadOperation.cpp  ReadOperation.hpp  SplitOperation.cpp  SplitOperation.hpp  WriteOperation.cpp  WriteOperation.hpp
PJC-matrix-multiplication/Multipliers/: DivideAndConquer.cpp  DivideAndConquer.hpp  Iterative.cpp  Iterative.hpp  IterativeMultiplier.cpp  IterativeMultiplier.hpp  MatrixMultiplier.hpp  Multiplication.cpp  Multiplication.hpp
PJC-matrix-multiplication/Operations/: Operation.cpp  Operation.hpp  OperationQueue.cpp  OperationQueue.hpp  OperationResource.cpp  OperationResource.hpp  TestOperation.cpp  TestOperation.hpp
matrices/: 01.txt  02.txt  03.txt.expected  04.txt.multiplied  05.txt.expected  07.txt.multiplied  10.txt  10.txt.expected  gen_matrix.swift
